Mouse cursor position is off when display scaling is in use in a Wayland environment
Environment/Versions
- GIMP version: 2.99.15 68cd8734
- Package: https://repo.archlinuxcn.org/x86_64/ and search for gimp-git; build script
- Operating System: Arch Linux recent
- Desktop environment: Wayland (wlroots-based wayfire), 2x scale (HiDPI)
Description of the bug
Reproduction
Is the bug reproducible? Always
Reproduction steps:
- Create a new canvas
- Use the rectangle tool to create a rectangle selection at somewhere
Expected result:
The rectangle selection should start at where the mouse cursor is.
Actual result:
The rectangle selection starts somewhere right-bottom to where the mouse cursor is.
The video was recorded from a previous version but the issue still happens for current version.
Edited by lilydjwg